# proc-macro-playground

./: Cargo.toml
.github/actions/rust-test/: action.yml
.github/workflows/: ci.yml  cr.yml
builder/: Cargo.toml
builder/examples/: main.rs
builder/examples/demo/: main.rs
builder/examples/tracing/: main.rs
builder/src/: lib.rs
builder/tests/: 07-repeated-field.rs  08-unrecognized-attribute.stderr  progress.rs
debug/: Cargo.toml
debug/examples/: main.rs
debug/src/: lib.rs
debug/tests/: 02-impl-debug.rs  progress.rs
demo/: Cargo.toml
demo/examples/: main.rs
demo/src/: lib.rs
src/: main.rs
